サーブの種類をマークダウン形式に

--- a/12-Dec-20_卓球目標.md
+++ b/12-Dec-20_卓球目標.md
@@ -1,21 +1,21 @@
 ## サーブ
-###順横の下　
-    第一バウンドを台の1/3に落とす。肘を体につけて、体の回転で切る。
-    2バウンド
-    クロスロング
-    ストレートロング　
-###真下
-    しゃくり
-    水平
-    ロング
-###巻き込み　クロス
-    上
-    下
+### 順横の下　
+    - 第一バウンドを台の1/3に落とす。肘を体につけて、体の回転で切る。
+    - 2バウンド
+    - クロスロング
+    - ストレートロング　
+### 真下
+    - しゃくり
+    - 水平
+    - ロング
+### 巻き込み　クロス
+    - 上
+    - 下
 
-##レシーブ
-###バック深くへ左横上回転
+## レシーブ
+### バック深くへ左横上回転
         裏面でライジングをレシーブ
-###フォア前の左横上、横下
+### フォア前の左横上、横下
         ストレートにナックルフリック
 
 # 原田式長期目的・目標設定用紙
