ルーティンの追加
継続できたものだけ追加する

--- a/12-Dec-20_卓球目標.md
+++ b/12-Dec-20_卓球目標.md
@@ -19,8 +19,8 @@
 |私は毎週火曜日と金曜日に中央区総合体育館で練習試合に参加します。|2月21日迄　裏面バックハンドとフォアハンドの切り替え練習を行います。|
 |私は毎週木曜日に浦安の練習でサーブ練習を行います。|2月28日迄　バックハンドで3球目ドライブを8割以上入るスイングを作ります。|
 |私は毎週土曜日に中野の練習で基礎練習を行います。|3月2日迄　ストレッチを入念に行い試合に備えます。|
-|私は| 月　日迄||
-|私は| 月　日迄||
+|私は午後3時以降はカフェインレスコーヒーを飲みます。| 月　日迄||
+|私は夜自宅ではコカコーラゼロカフェインを飲みます。| 月　日迄||
 |私は|　月　日迄||
 
 
