ルーティンの修正

--- a/12-Dec-20_卓球目標.md
+++ b/12-Dec-20_卓球目標.md
@@ -1,7 +1,7 @@
 # 原田式長期目的・目標設定用紙
-|氏名|椋寛之|記入日:2020年12月29日|目標達成日|2020年3月2日|
-|---|---|---|---|-|
-|奉仕活動|（家庭）私は毎日トイレ掃除を行います。||（職場）私は毎週月・水・金曜日の朝、マンション廊下、駐輪場、ゴミ捨て場のゴミ拾いを行います。|
+|椋寛之|記入日:2020年12月29日|目標達成日:2021年3月2日|
+|---|---|---|
+|奉仕活動|（家庭）私は毎日トイレ掃除を行います。|（職場）私は毎週月・水・金曜日の朝、マンション廊下、駐輪場、ゴミ捨て場のゴミ拾いを行います。|
 
 |目的・目標の4観点||
 |-|-|
@@ -20,7 +20,7 @@
 |私は毎週木曜日に浦安の練習でサーブ練習を行います。|2月28日迄　バックハンドで3球目ドライブを8割以上入るスイングを作ります。|
 |私は毎週土曜日に中野の練習で基礎練習を行います。|3月2日迄　ストレッチを入念に行い試合に備えます。|
 |私は午後3時以降はカフェインレスコーヒーを飲みます。| 月　日迄||
-|私は夜自宅ではコカコーラゼロカフェインを飲みます。| 月　日迄||
+|私は夜7時以降自宅ではコカコーラゼロカフェインを飲みます。| 月　日迄||
 |私は|　月　日迄||
 
 
@@ -28,8 +28,8 @@
 -|-|-|-|-
 |目標達成のための支援内容|①サーブの出し方、構え方、バウンドのさせ方を聞く|②サーブの切り方、構え方、体勢について聞く|③浜町で試合をしてもらう|④浦安で練習してもらう|
 
-||成功・強みの分析|失敗・弱みの分析||
-|-|-|-|-|
+||成功・強みの分析|失敗・弱みの分析|
+|-|-|-|
 |心・メンタル|①相手の表情、動きをしっかり見る。②次の1球のことだけを考える。③喜びを声に出す。|①試合中にミスを引きずる。②結果を気にする。③失点を相手の強さやりにくさのせいにしている。|
 |技・スキル|①サーブが低く出せる。②レシーブを低く返せる。③チャンスボールをバックストレートに打てる。|①サーブが高くなる。②サーブが台から出る。③レシーブミスが連続する。
 |体・健康|①平均8時間の睡眠を確保している。②毎朝サイクリングとストレッチを行っている。③毎朝スクワットとプッシュアップを行っている。|①腰痛で動きが制限される。②肩甲骨の張りを感じる。③飲み会のあと富士そばを食べる。|
