ルーティンと期日の修正

--- a/12-Dec-20_卓球目標.md
+++ b/12-Dec-20_卓球目標.md
@@ -13,10 +13,10 @@
 |私は卓球で3種類8系統のサーブが出せるようになり、3月2日に悔いのない試合ができて、自分の可能性に期待を持ちます。これまで指導、練習していただいた方々へ感謝の気持ちがいっぱいです。|
 |【ルーティン行動】優先順位が高い順に並べる|【期日行動】発生期日順に並べる|
 |私は毎晩夕食後に日誌を書いてチャレンジカップに投稿します。| 1月10日迄　肘を体に付けたサーブで試合に参加します。|
-|私は毎朝サイクリングを行います。| 1月24日迄　相手にツッツかせるサーブを完成させます。|
+|私は毎朝サイクリングを行います。| 1月24日迄　部屋の中にサーブ練習ができる環境を作ります。|
 |私は毎朝お尻とハムストリングのストレッチを行います。| 2月7日迄　横回転サーブからバックハンドのパターンを試合で使います。|
 |私は毎朝スクワットとプッシュアップを5回以上行います。|2月14日迄　バックハンドでロングサーブをレシーブする技術を試合で使います。|
-|私は毎週火曜日と金曜日に中央区総合体育館で練習試合に参加します。|2月21日迄　裏面バックハンドとフォアハンドの切り替え練習を行います。|
+|私は毎日自宅のテーブルでサーブ練習を行います。|2月21日迄　裏面バックハンドとフォアハンドの切り替え練習を行います。|
 |私は毎週木曜日に浦安の練習でサーブ練習を行います。|2月28日迄　バックハンドで3球目ドライブを8割以上入るスイングを作ります。|
 |私は毎週土曜日に中野の練習で基礎練習を行います。|3月2日迄　ストレッチを入念に行い試合に備えます。|
 |私は午後3時以降はカフェインレスコーヒーを飲みます。| 月　日迄||
